# config-th

./: .gitignore  config-th.cabal
src/Data/Config/: TH.hs
test/: test-config.hs
